--- a/lect7/app.json
+++ b/lect7/app.json
@@ -27,6 +27,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "Demo app for Lecture 7 at the Warsaw University of Technology"
   }
 }
