--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "lect7",
-    "slug": "lect7",
+    "name": "react-native-lab1",
+    "slug": "react-native-lab1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,6 +28,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "Demo app for Lecture 7 at the Warsaw University of Technology"
+    "description": "app for react native labs",
+    "githubUrl": "https://github.com/bartoszluka/react-native-lab1/"
   }
 }
